fixed about container getting out of place when width of page got smaller

--- a/css/index.css
+++ b/css/index.css
@@ -261,7 +261,7 @@ header {
 /* gallery section */
 .gallery {
   width: 100%;
-  height: 120vh;
+  /* height: 120vh; */
   text-align: center;
   background-color: rgb(0, 4, 17);
 }
@@ -269,7 +269,7 @@ header {
 /* about us section */
 .about {
   width: 100%;
-  height: 75vh;
+  /* height: 75vh; */
   text-align: center;
   background-image: url("../img/staff-cooks.jpg");
   background-size: cover;
